# signalflow-ta

./: .gitignore  README.md  TODO.md  add_warmup_properties.py  pyproject.toml  requirements.txt  test_detectors.ipynb  test_divergence_quick.py
.claude/: settings.local.json
.github/workflows/: release.yml
notebooks/: test.ipynb
src/signalflow/ta/: __init__.py  _normalization.py  auto_norm.py  smoothers.py  warmup.py
src/signalflow/ta/divergence/: __init__.py  base.py  macd_div.py  multi_div.py  pivot.py  rsi_div.py
src/signalflow/ta/global_features/: __init__.py  market.py
src/signalflow/ta/momentum/: __init__.py  core.py  kinematics.py  macd.py  oscillators.py
src/signalflow/ta/overlap/: __init__.py  adaptive.py  price.py  smoothers.py
src/signalflow/ta/performance/: __init__.py  returns.py
src/signalflow/ta/pipes/: __init__.py  divergence.py  momentum.py  overlap.py  performance.py  stat.py  trend.py  volatility.py  volume.py
src/signalflow/ta/signals/: __init__.py  _utils.py  adx_regime.py  aroon_cross.py  bollinger_band.py  cci_anomaly.py  cross_pair.py  divergence.py  filters.py  hampel_filter.py  isolation_forest.py  kalman_filter.py  keltner_channel.py  market_condition.py  mfi.py  rsi_anomaly.py  stochastic.py
src/signalflow/ta/stat/: __init__.py  complexity.py  control.py  cross_sectional.py  cycle.py  dispersion.py  distribution.py  dsp.py  information.py  memory.py  realized.py  regression.py  structure.py
tests/:  test_integration.py  conftest.py  indicator_registry.py  pytest.ini  test_core.py  test_indicators.py  test_new_indicators.py  test_signals.py
(+15 files in other folders)
