[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalflow-ta"
version = "0.4.0"
description = "Technical analysis extension for signalflow-trading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "signalflow-trading>=0.4.0",
  "pandas-ta>=0.4.67b0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["signalflow.ta*"]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
